<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backdrop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigation"
    tools:context=".ui.setting.act.naviga.DataNavigationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar.MyStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navigation_bar"
        app:navigationIcon="@mipmap/ic_back_black"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/title_navigation_add"
            android:textAppearance="@style/Toolbar.TitleText"
            android:textColor="@color/black" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/y20"
        android:divider="@color/black"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="输入地点（如：去展示区）"
                android:inputType="textPhonetic"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/x8" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_guide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="输入引导语（如：我带您去）"
                android:inputType="textPhonetic"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/x8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_datail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="输入地点的详情信息"
                android:inputType="textPhonetic"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="@dimen/x8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/set_action"
                android:textColor="@color/black"
                android:textSize="@dimen/x8" />

            <TextView
                android:id="@+id/tv_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50px"
                android:layout_weight="1"
                android:hint="点击选择目的地"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/x8" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_img"
                android:layout_width="@dimen/y75"
                android:layout_height="@dimen/y45"
                android:background="@mipmap/choose_long_btn"
                android:gravity="center"
                android:text="@string/set_img"
                android:textColor="@color/black"
                android:textSize="@dimen/x10" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigation_layout"
        android:layout_margin="@dimen/y7"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/y4"
        app:contentPadding="@dimen/y7">

        <ImageView
            android:id="@+id/img_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>

</RelativeLayout>